--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: cucumber-html-report-${{ matrix.browser }}
+          name: cucumber-html-report
           path: target/cucumber-reports.html
 
       # 6. Upload Surefire reports
