--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
         <artifactId>webdrivermanager</artifactId>
         <version>5.5.0</version>
     </dependency>
+
+    <dependency>
+        <groupId>io.cucumber</groupId>
+        <artifactId>cucumber-picocontainer</artifactId>
+        <version>7.34.2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
   <build>
