fix minor changes

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -44,3 +44,10 @@ jobs:
         with:
           name: cucumber-html-report-${{ matrix.browser }}
           path: target/cucumber-reports.html
+
+      - name: Upload Surefire Reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: surefire-reports-${{ matrix.browser }}
+          path: target/surefire-reports
